# OpenBusiness

./: .env.example  .gitignore  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  llms.txt  pyproject.toml
.context/: codex-session-id
.github/workflows/: ci.yml
assets/: _gen_demos.py
docs/: EXTENDING.md  PROMOTION.md
examples/: README.md  notion-business-model.en.md
openbusiness/: __init__.py  analysis_run.py  artifacts.py  claims.py  cli.py  evidence.py  language.py  profiles.py  stages.py
openbusiness/agents/analysts/: __init__.py  competitive_analyst.py  evidence_collector.py  finalizer.py  financial_analyst.py  gtm_analyst.py  jtbd_analyst.py  moat_analyst.py  product_analyst.py  stress_tester.py  synthesizer.py  traffic_analyst.py  unit_econ_analyst.py  value_prop_analyst.py
openbusiness/agents/managers/: __init__.py  research_director.py  strategy_director.py
openbusiness/agents/researchers/: __init__.py  optimist.py  pessimist.py
openbusiness/agents/utils/: agent_state.py  prompt_context.py  tool_calling.py
openbusiness/graph/: conditional_logic.py  setup.py
openbusiness/llm_clients/: config.py  factory.py
openbusiness/resources/: __init__.py
openbusiness/resources/packs/: ai-infra.toml  consumer-app.toml  ecommerce.toml  general.toml  public-company.toml  saas.toml
openbusiness/resources/templates/: competitor-map.md  founder-copycat.md  investor-memo.md  standard.md
openbusiness/tools/: evidence_tools.py  financial_tools.py  traffic_tools.py  web_tools.py
promo/: READY-TO-POST.md  blog-devto.md  directories-newsletters.md  product-hunt.md  reddit-entrepreneur.md  reddit-localllama.md  reddit-sideproject.md  show-hn.md  twitter-thread.md
site-demo/: README.md  app.js  index.html  styles.css
tests/: test_analysis_run.py  test_artifacts.py  test_claims.py  test_evidence.py  test_llm_factory.py  test_profiles.py  test_stages.py
