[project]
name = "openbusiness"
version = "0.1.0"
description = "AI-driven multi-agent business model reverse engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "rich>=13.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
openbusiness = "openbusiness.cli:main"

[tool.setuptools.packages.find]
include = ["openbusiness*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
