[project]
name = "openbusiness"
version = "0.1.0"
description = "Evidence-first AI business model analysis and reverse engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "ai agents",
    "anthropic",
    "business model",
    "business model canvas",
    "company research",
    "competitive analysis",
    "deepseek",
    "due diligence",
    "evidence research",
    "go-to-market",
    "langgraph",
    "llm",
    "market research",
    "moat analysis",
    "openai",
    "sec edgar",
    "startup analysis",
    "unit economics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "rich>=13.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/wanikua/OpenBusiness"
Repository = "https://github.com/wanikua/OpenBusiness"
Documentation = "https://github.com/wanikua/OpenBusiness#readme"
"Sample Reports" = "https://github.com/wanikua/OpenBusiness/tree/master/examples"
Issues = "https://github.com/wanikua/OpenBusiness/issues"

[project.scripts]
openbusiness = "openbusiness.cli:main"

[tool.setuptools.packages.find]
include = ["openbusiness*"]

[tool.setuptools.package-data]
"openbusiness.resources" = ["packs/*.toml", "templates/*.md"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
